--- a/css/base.css
+++ b/css/base.css
@@ -2,14 +2,27 @@ body{
 	margin:0;
 	color:#555;
 	font:12px 微软雅黑,arial,宋体;
-	/* box-sizing:border-box; */
+	background:#fff;
+	line-height:1.5;
+	/* -webkit-box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	 box-sizing:border-box;  */
 }
 /* *,*:before,*:after{
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing:border-box;
 	box-sizing:inherit;
 } */
 .container{
 	width:1200px;
 	margin:0 auto;
+}
+.container_fluid{
+	width:100%;
+	margin:0 auto;
+}
+img{
+	border:0;
 }
 input,button{
 	font-family:微软雅黑,arial,宋体;
@@ -52,6 +65,15 @@ a{
 .bg_orange1{
 	background-color:#EE6A1E;
 }
+.text_center{
+	text-align:center;
+}
+.text_left{
+	text-align:left;
+}
+.text_center{
+	text-align:right;
+}
 .fl{
 	float:left;
 }
@@ -71,3 +93,4 @@ a{
 img[src=""],img:not([src]){
 	opacity:0;
 }
+
