--- a/css/header.css
+++ b/css/header.css
@@ -24,7 +24,7 @@
   height:4px;
   border:4px solid;
   border-color:#C7C7C9 transparent transparent transparent;
-  background:url("../image/icons-1.png") no-repeat 0px -40px;
+  background:url("http://127.0.0.1:80/images/icons-1.png") no-repeat 0px -40px;
   margin-left:5px;
   transition:all linear 0.5s;
 }
@@ -96,50 +96,129 @@
   vertical-align: middle;
   margin-left:-5px;
   border:0;
+  outline:none;
 }
 .search_icon{
   display:block;
-  background: url('../image/icons-2.png') no-repeat -28px -67px;
+  background: url('http://127.0.0.1:80/images/icons-2.png') no-repeat -28px -67px;
   width: 24px;
 	height: 25px;
   margin:7.5px auto;
 }
-#header2>a:last-child{
+/* 购物车 */
+#header2 div{
+  box-sizing:border-box;
+}
+#header2>.shopping_cart{
+  width:200px;
   height: 40px;
   margin-top: 20px;
   line-height: 40px;
   float: right;
+  position:relative;
 }
-#header2>a>.shop_cart{
-  display:inline-block;
-  width:159px;
-  height:38px;
-  border:1px solid #EFEFEF;
-  vertical-align:middle;
+
+#header2>.shopping_cart>.drop_btn{
+  float:left;
+  width:100%;
+  height:40px;
+  cursor:pointer;
+}
+#header2>.shopping_cart>.drop_btn a{
   color:#666666;
-  background-color:#F8F8F8;
 }
-#header2>a>.shop_cart:hover{
+#header2>.shopping_cart>.drop_btn:hover a{
   color:#f00;
 }
-#header2>a>.shop_cart>.shop_icon{
+#header2>.shopping_cart>.drop_btn>div{
+  float:left;
+}
+#header2>.shopping_cart>.drop_btn>div:first-child{
+  height:40px;
+  width:160px;
+  line-height: 40px;
+  border:1px solid #EFEFEF;
+  background-color:#F8F8F8;
+}
+
+#header2>.shopping_cart>.drop_btn>div:first-child>a>.icon{
   display:inline-block;
-  background:url('../image/icons-2.png') no-repeat -15px -213px;
+  background:url('http://127.0.0.1:80/images/icons-2.png') no-repeat -15px -213px;
   width:20px;
   height:20px;
-  vertical-align:middle;
-  margin:0px 10px;
+  margin:-5px 10px;
 }
-#header2>a>.count{
-  display:inline-block;
+#header2>.shopping_cart>.drop_btn>div:nth-child(2){
+  float:right;
   width:40px;
   height:40px;
   background-color:#CC3333;
-  vertical-align:middle;
-  text-align: center;
   color:#fff;
   font-weight:bold;
+  font-size:15px;
+  text-align: center;
 }
+
+#header2>.shopping_cart>.drop_list{
+  display:none;
+  position:absolute;
+  width:333px;
+  height:100px;
+  top:100%;
+  right:0px;
+  z-index:2;
+}
+#header2>.shopping_cart:hover>.drop_list{
+  display:block;
+}
+/* 不设高度，由内容撑开 */
+#header2>.shopping_cart>.drop_list>.shopping_list{
+  width:100%;
+  border-width:1px 1px 0 1px;
+  border-style:solid;
+  border-color:#D5D4D4;
+  background:#ffffff;
+}
+/* 加入购物车的商品样式 */
+#header2>.shopping_cart>.drop_list>.shopping_list>.shopping_item{
+  width:100%;
+  height:60px;
+  padding:10px;
+  text-align:center;
+  line-height:40px;
+}
+/* 结算 */
+#header2>.shopping_cart>.drop_list>.balance{
+  width:100%;
+  height:40px;
+  border:1px solid #CC3333;
+}
+#header2>.shopping_cart>.drop_list>.balance span{
+  display:inline-block;
+  width:65px;
+  height:38px;
+  text-align:center;
+  background:#F4F4F4;
+}
+#header2>.shopping_cart>.drop_list>.balance span:first-child{
+  padding-left:5px;
+  font-weight:bold;
+}
+#header2>.shopping_cart>.drop_list>.balance span:nth-child(2){
+  padding-left:116px;
+  padding-right:15px;
+  color:#f00;
+}
+#header2>.shopping_cart>.drop_list>.balance span:last-child{
+  background:#CC3333;
+}
+
+
+
+
+
+
+/* 热门搜索*/
 #header2>.hot{
   position:absolute;
   left:408px;
@@ -256,7 +335,7 @@
   height:10px;
   margin-top:23px;
   margin-right:8px;
-  background:url("../image/top_bg.png") no-repeat -150px -10px;
+  background:url("http://127.0.0.1:80/images/top_bg.png") no-repeat -150px -10px;
 }
 #nav .side_menu{
   display:none;
@@ -319,3 +398,4 @@
 #nav .side_menu>.recommend>div>a:hover{
   color:#C9033B;
 }
+
