--- a/css/login.css
+++ b/css/login.css
@@ -19,7 +19,7 @@
 /*section主体部分*/
 #section{
 	height:420px;
-	background:url("../image/login_big.jpg") no-repeat center center;
+	background:url("http://127.0.0.1:80/images/login_big.jpg") no-repeat center center;
 }
 #section .container{
 	height:100%;
@@ -40,13 +40,12 @@
 	border:1px solid #ffffff;
 	border-radius:3px;
 }
-#section .login_form div:first-child{
+#section .login_form form>div:first-child{
 	height:48px;
 	line-height:48px;
 	border-bottom:1px solid #e8e8e8;
-	margin-bottom:33px;
 }
-#section .login_form form div:first-child a{
+#section .login_form form>div:first-child a{
 	padding:0 31px;
 }
 #section .login_form form input{
@@ -77,7 +76,7 @@
 #section .login_form form .ml_263{
 	margin-left:263px;
 }
-#section .login_form form div:nth-child(4){
+#section .login_form form .login_box>.normal_login_box>div:nth-child(3){
 	margin-bottom:22px;
 }
 #section .login_form form input.login_btn{
@@ -87,12 +86,12 @@
 	margin-bottom:20px;
 	cursor: pointer;
 }
-#section .login_form form div:last-child{
+#section .login_form form>div:last-child{
 	margin:0 25px;
 	border-top:1px solid #e6e6e6;
 	padding-top:12px;
 }
-#section .login_form form div:last-child img{
+#section .login_form form>div:last-child img{
 	width:25px;
 	height:25px;
 	vertical-align: middle;
@@ -109,7 +108,27 @@ p.err{
 	float:left;
 	margin-left: 26px;
 	margin-top: -20px;
-	background: url(../image/x.png) no-repeat left center;
+	background: url(http://127.0.0.1:80/images/x.png) no-repeat left center;
 	text-indent: 18px;
+}
+#section .login_box{
+	width:100%;
+	height:254px;
+	position:relative;
+}
+#section .login_box>.normal_login_box{
+	padding-top:33px;
+}
+#section .wx_login_box{
+	position:absolute;
+	display:none;
+	left:50%;
+	top:50%;
+	transform:translate(-50%,-50%);
+	border:1px solid #C8C8C8;
+}
+#section .wx_login_box img{
+	width:200px;
+	height:200px;
 }
 
