--- a/css/index.css
+++ b/css/index.css
@@ -71,12 +71,13 @@
   margin:0 auto;
   position:relative;
 }
-#section>.carousel>.car_img img{
+#section>.carousel>.car_img a{
   width:100%;
   height:410px;
   position:absolute;
   cursor:pointer;
 }
+
 #section>.carousel>.car_img .active{
  z-index:1;
 }
